Begin adding first embibe links

--- a/grades/6/cbse/biology/1/info.yaml
+++ b/grades/6/cbse/biology/1/info.yaml
@@ -1,5 +1,5 @@
 # Chapter info
 
-name: Chapter Name
-desc: Chapter Description
+name: "Food: Where Does it Come From?"
+desc: Have you ever wondered where food comes from?
 study-time: 10:30
