--- a/grades/6/cbse/biology/1/res.yaml
+++ b/grades/6/cbse/biology/1/res.yaml
@@ -1,9 +1,7 @@
 # Chapter resources
 
-embibe: embibeVideo
-phet: phetLink
+embibe: "https://www.embibe.com/video/summary/5912165?format_reference=5ec5867a0c88fe5860961943&topic_learnpath_name=cbse--6th+cbse--science--biology--components+of+food--food+and+its+components"
+phet: ""
 
 # Any extra resources here
 extra:
-  - Extra references here
-  - Second extra reference
