--- a/grades/6/cbse/biology/1/info.yaml
+++ b/grades/6/cbse/biology/1/info.yaml
@@ -3,3 +3,6 @@
 name: "Food: Where Does it Come From?"
 desc: Have you ever wondered where food comes from?
 study-time: 10:30
+tags: 
+  - food
+primary-tag: food
