--- a/grades/6/cbse/biology/1/res.yaml
+++ b/grades/6/cbse/biology/1/res.yaml
@@ -1,17 +1,28 @@
 # Chapter resources
 
-embibe: 
-  - https://www.embibe.com/video/summary/5912165?format_reference=5ec5867a0c88fe5860961943&topic_learnpath_name=cbse--6th+cbse--science--biology--components+of+food--food+and+its+components
-khan:
-vedantu:
-  - https://www.vedantu.com/biology/food-source
-  
-phet:
+main:
+  name: $name
 
-extra:
+  embibe:
+    videos:
+      - link: https://www.embibe.com/video/summary/5912165?format_reference=5ec5867a0c88fe5860961943&topic_learnpath_name=cbse--6th+cbse--science--biology--components+of+food--food+and+its+components
+        js-needed: NO
 
-youtube:
-  - https://www.youtube.com/watch?v=8hJH9MYZO50
+  khan:
 
-advanced:
-  - https://www.khanacademy.org/humanities/whp-origins/era-5-the-first-global-age/53-the-colombian-exchange-betaa/a/read-crops-that-grew-the-world-beta
+  vedantu:
+    videos:
+      - link: https://www.vedantu.com/biology/food-source
+        js-needed: NO
+
+  phet:
+
+  extra:
+
+  youtube:
+    videos:
+      - link: https://www.youtube.com/watch?v=8hJH9MYZO50
+        js-needed: YES
+
+  advanced:
+    - https://www.khanacademy.org/humanities/whp-origins/era-5-the-first-global-age/53-the-colombian-exchange-betaa/a/read-crops-that-grew-the-world-beta
