--- a/grades/6/cbse/biology/1/info.yaml
+++ b/grades/6/cbse/biology/1/info.yaml
@@ -9,3 +9,7 @@ tags:
 
 # If omitted, gen_info.py will automatically use the first tag as the primary tag
 primary-tag: food
+
+subject: biology
+grade: 6
+board: cbse
