--- a/grades/6/cbse/biology/2/info.yaml
+++ b/grades/6/cbse/biology/2/info.yaml
@@ -9,3 +9,11 @@ tags:
 
 # If omitted, gen_info.py will automatically use the first tag as the primary tag
 primary-tag: tag1
+
+# Subtopic tags
+subtopic-tags:
+  main:
+
+subject: biology
+grade: 6
+board: cbse
