--- a/grades/6/cbse/biology/2/info.yaml
+++ b/grades/6/cbse/biology/2/info.yaml
@@ -4,8 +4,9 @@ name: Components of Food
 desc: Chapter Description
 study-time: 10:30
 tags: 
-  - food
-  - components
+  accept:
+    - food
+    - components
 
 # If omitted, gen_info.py will automatically use the first tag as the primary tag
 primary-tag: tag1
