--- a/grades/6/cbse/biology/1/info.yaml
+++ b/grades/6/cbse/biology/1/info.yaml
@@ -18,6 +18,10 @@ subtopic-tags:
     accept:
     reject:
       - deficiency
+  deficiency:
+    accept:
+      - deficiency
+    reject:  
 
 subject: biology
 grade: 6
