--- a/grades/6/cbse/biology/1/extres.yaml
+++ b/grades/6/cbse/biology/1/extres.yaml
@@ -21,3 +21,5 @@ main:
 
   advanced:
     - link: https://www.khanacademy.org/humanities/whp-origins/era-5-the-first-global-age/53-the-colombian-exchange-betaa/a/read-crops-that-grew-the-world-beta
+deficiency:
+  name: Deficiency Diseases
