--- a/grades/6/cbse/biology/2/info.yaml
+++ b/grades/6/cbse/biology/2/info.yaml
@@ -1,20 +1,16 @@
+# Access ID
+id: '6a444107-8cf7-475a-b1d8-e43aafa6d886'
+
 # Chapter info
-
 name: Components of Food
-desc: Chapter Description
-study-time: 630
-tags: 
-  accept:
-    - food
-    - components
+study-time: 0
 
-# If omitted, gen_info.py will automatically use the first tag as the primary tag
-primary-tag: tag1
-
-# Subtopic tags
-subtopic-tags:
+# Topics
+topics:
+  # The main topic is always the base topic that is used
   main:
-
-subject: biology
-grade: 6
-board: cbse
+    accept:
+      - food
+      - components
+    reject:
+    subtopics:
