--- a/grades/6/cbse/biology/1/info.yaml
+++ b/grades/6/cbse/biology/1/info.yaml
@@ -1,4 +1,4 @@
-id: 'f5a07301-732d-4031-9c54-775e71589095'
+iname: food-where-it-comes-from
 
 # Chapter info
 name: "Food: Where Does it Come From?"
