Add resource stuff and switch to msgpack for final builds

--- a/grades/6/cbse/biology/1/info.yaml
+++ b/grades/6/cbse/biology/1/info.yaml
@@ -15,9 +15,19 @@ topics:
     reject:
     - deficiency
     subtopics:
+      main:
+        name: Test
+        accept:
+        reject:
+        subtopics:
   deficiency:
     name: Deficiency Diseases
     accept:
     - deficiency
+    reject:
+    subtopics:
+  mew:
+    name: Test
+    accept:
     reject:
     subtopics:
